add Node.js script to test two versions

--- a/package.json
+++ b/package.json
@@ -20,7 +20,5 @@
   },
   "homepage": "https://github.com/BethGriggs/assay#readme",
   "devDependencies": {},
-  "dependencies": {
-    "commander": "^2.19.0"
-  }
+  "dependencies": {}
 }
